FIX: Resolvendo conflitos de Mapper